--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/nouislider.min.css">
 </head>
 
 <body>
@@ -72,17 +73,20 @@
 
 <!-- Vis 3 -->
 <div id="timeline-chart" class="section vis1">
-<button id ="updateButton" class="btn bg-primary" >Refresh</button>
+  <button id="updateButton" class="btn bg-primary" >Refresh</button>
+  </br>
 
-<div id="slider-area">
-</div>
+  </br>
 
-  <p>[NoUI Slider will go here (almost fully implemented]</p>
+  <div id="slider-area">
+  </div>
 
 <p id="event-start"></p>
 <p id="event-end"></p>
 
 </div>
+
+<div id="chart-area" class="col-sm-7"> </div>
 
   <!-- Load JS libraries -->
   <script src="js/lib/jquery.min.js"></script>
@@ -93,12 +97,14 @@
   <script src="js/lib/d3.layout.orbit.js"></script>
   <script src="js/lib/bootstrap.min.js"></script>
   <script src="js/lib/parallax.min.js"></script>
-  <script src="js/lib/nouislider.js"></script>
+  <script src="js/lib/nouislider.min.js"></script>
 
-  <script src="js/main-2.js"></script>
+
   <script src="js/vis/radial-vis.js"></script>
   <script src="js/vis/timeline-vis.js"></script>
   <script src="js/vis/hist-vis.js"></script>
+
+  <script src="js/main-2.js"></script>
 
 
 </body>
