--- a/index.html
+++ b/index.html
@@ -60,8 +60,14 @@
 </div>
 
 <!-- CLOSE UP VIS -->
-<div id="closeup-vis" class="section">
-  <div class="col-md-offset-4 col-md-4"></div>
+<div class="section closeup">
+  <div id="closeup-vis" class="col-md-offset-3 col-md-4"></div>
+  <div class="col-md-2">
+    <h5>Planetary Mass</h5>
+    <h5>Planetary Radius</h5>
+    <h5>Orbital Period</h5>
+    <h5>Orbital Radius</h5>
+  </div>
 </div>
 
 <!-- Vis 2 BAR GRAPHS -->
