--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 <div class="section closeup">
   <div id="closeup-vis" class="col-md-offset-3 col-md-4"></div>
   <div class="col-md-2">
-    <h5>Planetary Mass</h5>
-    <h5>Planetary Radius</h5>
-    <h5>Orbital Period</h5>
-    <h5>Orbital Radius</h5>
+    <h5 id="mass">Planetary Mass</h5>
+    <h5 id="radius">Planetary Radius</h5>
+    <h5 id="period">Orbital Period</h5>
+    <h5 id="orbrad">Orbital Radius</h5>
   </div>
 </div>
 
@@ -125,6 +125,7 @@
   <script src="js/vis/timeline-vis.js"></script>
   <script src="js/vis/hist-vis.js"></script>
   <script src="js/vis/closeup-vis.js"></script>
+  <script src="js/main-2.js"></script>
 
   <script type="text/javascript" src="plugins/sphere/requestanimationframe.polyfill.js"></script>
   <script type="text/javascript" src="plugins/jquery/jquery-1.7.2.min.js"></script>
@@ -132,8 +133,6 @@
   <script type="text/javascript" src="js/rotate/sphere-hacked.js"></script>
   <script type="text/javascript" src="js/rotate/jquery.earth-3d.js"></script>
   <script type="text/javascript" src="js/rotate/demo.js"></script>
-
-  <script src="js/main-2.js"></script>
 
 
 </body>
