--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 <div class="section closeup">
   <div id="closeup-vis" class="col-md-offset-3 col-md-4"></div>
   <div class="col-md-2">
+    <h3 id="planetname">Earth</h3>
     <h5 id="mass">Planetary Mass</h5>
     <h5 id="radius">Planetary Radius</h5>
     <h5 id="period">Orbital Period</h5>
