--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
   <div id="closeup-vis" class="col-md-offset-3 col-md-4"></div>
   <div class="col-md-2">
     <h3 id="planetname">Earth</h3>
+    <h5 id="temperature">Temperature</h5>
     <h5 id="mass">Planetary Mass</h5>
     <h5 id="radius">Planetary Radius</h5>
     <h5 id="period">Orbital Period</h5>
