--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
   <div id="closeup-vis" class="col-md-offset-3 col-md-4"></div>
   <div class="col-md-2">
     <h3 id="planetname">Earth</h3>
-    <h5 id="temperature">Temperature</h5>
-    <h5 id="mass">Planetary Mass</h5>
-    <h5 id="radius">Planetary Radius</h5>
-    <h5 id="period">Orbital Period</h5>
-    <h5 id="orbrad">Orbital Radius</h5>
+    <h5 id="temperature" class="closeuptext">Temperature</h5>
+    <h5 id="mass" class="closeuptext">Planetary Mass</h5>
+    <h5 id="radius" class="closeuptext">Planetary Radius</h5>
+    <h5 id="period" class="closeuptext">Orbital Period</h5>
+    <h5 id="orbrad" class="closeuptext">Orbital Radius</h5>
   </div>
 </div>
 
