--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
 
 <body>
 
-
-
-<div id="billions" class="full_block"> <span style="font-size: 5em"> 200 billion </span><br> <span style="color: white"> planets in the observable universe</span></div>
-
 <div id="showoff">
   <div id="container">
     <canvas id="sphere" width="400" height="400"></canvas>
@@ -28,8 +24,12 @@
   </div>
 </div>
 
+<div id="billions" class="full_block"></div>
+
 <!-- PHOTO FROM http://24.media.tumblr.com/tumblr_m5yb8znHZW1rra1j7o8_1280.jpg -->
-<div class="parallax_container" data-parallax="scroll" data-image-src="img/galaxy.jpg"></div>
+<div class="parallax_container" data-parallax="scroll" data-image-src="img/galaxy.jpg">
+  <div id="intro-text" class="full_block">There are <br><span style="font-size: 4em"> 200 billion </span><br> <span style="color: white"> planets in the observable universe</span></div>
+</div>
 
 <!-- Life on Earth -->
 <div class="section">
