--- a/index.html
+++ b/index.html
@@ -15,28 +15,33 @@
 
 <body>
 
-<div id="showoff">
-  <div id="container">
-    <canvas id="sphere" width="400" height="400"></canvas>
-    <div id="glow-shadows" class="earth"></div>
-    <canvas id="flights" width="400" height="400"></canvas>
-    <div id="locations"></div>
+<div class="parallax_container" data-parallax="scroll" data-image-src="img/stars.jpg">
+  <div id="showoff">
+    <div id="container">
+      <canvas id="sphere" width="400" height="400"></canvas>
+      <div id="glow-shadows" class="earth"></div>
+      <canvas id="flights" width="400" height="400"></canvas>
+      <div id="locations"></div>
+    </div>
   </div>
 </div>
 
-<div id="billions" class="full_block"></div>
-
-<!-- PHOTO FROM http://24.media.tumblr.com/tumblr_m5yb8znHZW1rra1j7o8_1280.jpg -->
-<div class="parallax_container" data-parallax="scroll" data-image-src="img/galaxy.jpg">
-  <div id="intro-text" class="full_block">There are <br><span style="font-size: 4em"> 200 billion </span><br> <span style="color: white"> planets in the observable universe</span></div>
-</div>
-
 <!-- Life on Earth -->
-<div class="section">
+<div id="earth_section">
   <img id="earth_pic" class="center-block" src="img/earth.jpg">
-  <div id="earth_content" class="text_content">life on earth is defined by the following attributes: <span style="color: white;"> availability of liquid water </span>, <span style="color: white;">suitable temperature range</span>, and <span style="color: white;">size</span>, which determines the composition of the planet and it's atmosphere. </div>
+  <div id="earth_content" class="text_content">Life on earth is defined by the following attributes:
+    <span style="color: white;"> availability of liquid water </span>,
+    <span style="color: white;">suitable temperature range</span>, and
+    <span style="color: white;">size</span>, which determines the composition of the planet and it's atmosphere.
+    <br><br>Centuries of space exploration have been dedicated to the search of a <span style="color: white;">new earth</span>, that is, a planet with these characteristics
+    in the <span style="color: white;">habitable zone</span> of temperature ranges that support our definition of life.
+  </div>
 </div>
 
+<!--<div id="billions" class="full_block"></div>-->
+
+<div class="parallax_container" data-parallax="scroll" data-image-src="img/galaxy.jpg">
+  <div id="intro-text" class="full_block">There are <br><span style="font-size: 4em"> 200 billion </span><br> <span style="color: white"> planets in the observable universe</span><br><br>Is there another Earth?</div>
 
 <!-- Earth-like Planets -->
 <div class="section">
