--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
 <body>
 
+<!-- 200 billion planets: Is there a new Earth? Section-->
+<div id="intro-text" class="full_block"><span style="font-size: 4em"> 200 billion </span>
+  <br>planets in the observable universe<br><br>
+  <span style="color: gray">Is there another Earth?</span></div>
+
 <!-- intro: Earth Spinning -->
 <div class="parallax_container" data-parallax="scroll" data-image-src="img/stars.jpg">
   <div id="showoff">
@@ -40,13 +45,6 @@
   </div>
 </div>
 
-<!-- Parallax: 200 billion planets: Is there a new Earth? Section-->
-<div class="parallax_container" data-parallax="scroll" data-image-src="img/galaxy.jpg">
-  <div id="intro-text" class="full_block">There are <br><span style="font-size: 4em"> 200 billion </span>
-    <br> <span style="color: white"> planets in the observable universe</span><br><br>
-    Is there another Earth?</div>
-</div>
-
 <!-- Earth-like Planets Section-->
 <div id="earthlike_planets_section">
   <img id="earthlikes_pic" class="center-block" src="img/earthlikes.jpg">
@@ -54,12 +52,28 @@
     have the characteristics to support life.  To our knowledge, researches have proposed that there are
     approximately <span style="color: white;">4000</span> of these planets in the universe, each of
     which could host life.<br><br>
-    Let's take a look at these prospective planets that could potentially be our <span style="color: white;">'New Earth':</span></div>
+  </div>
 </div>
 
-<!-- Parallax: TENTATIVE VISUALIZATION -->
-<div class="parallax_container" data-parallax="scroll" data-image-src="img/space.jpg">
-  <div class="text_content placeholder">[Visualization Here]</div>
+<!-- Future of Space Exploration -->
+<div class="section">
+  <img id="future_pic" class="center-block" src="img/future.jpg">
+  <div id="future_content" class="text_content"><span style="color: white;">the future: </span> the search for habitable planets is becoming a popular topic in space exploration.  With the advancements of modern technology, we are now discovering more exoplanets than ever.</div>
+</div>
+
+<!-- Vis 3 -->
+<div id="timeline-chart" class="section vis1">
+  <button id="updateButton" class="btn bg-primary">Refresh</button>
+  </br>
+
+  </br>
+
+  <div id="slider-area">
+  </div>
+
+  <p id="event-start"></p>
+  <p id="event-end"></p>
+
 </div>
 
 <!-- Exploration: The 10 planets Section-->
@@ -70,9 +84,6 @@
   the specific study of all 4000 of these "earth-like planets".  However, scientists have honed in on
   <span style="color: white">10 prospective planets</span> that could host life and serve as a new home.</div>
 </div>
-
-<!-- PHOTO FROM http://24.media.tumblr.com/tumblr_m5yb8znHZW1rra1j7o8_1280.jpg
-<div class="parallax_container" data-parallax="scroll" data-image-src="img/universe.jpg"></div>-->
 
 <!-- Vis 1 ORBIT -->
 <div class="parallax_container" data-parallax="scroll" data-image-src="img/vis12.jpg">
@@ -109,35 +120,14 @@
 </div>
 
 <!-- Parallax: Can We Go there? -->
-<div class="parallax_container" data-parallax="scroll" data-image-src="img/nasa.jpg">
-  <div class="text_content placeholder">Can we go there?</div>
-</div>
+<div class="text_content placeholder">Can we go there?</div>
 
 <!-- SPACE SHUTTLE VIS -->
 <div class="section">
   <img id="resize_mock" src="img/mock.png">
 </div>
 
-<!-- Future of Space Exploration -->
-<div class="section">
-  <img id="future_pic" class="center-block" src="img/future.jpg">
-  <div id="future_content" class="text_content"><span style="color: white;">the future: </span> the search for habitable planets is becoming a popular topic in space exploration.  With the advancements of modern technology, we are now discovering more exoplanets than ever.</div>
-</div>
 
-<!-- Vis 3 -->
-<div id="timeline-chart" class="section vis1">
-  <button id="updateButton" class="btn bg-primary">Refresh</button>
-  </br>
-
-  </br>
-
-  <div id="slider-area">
-  </div>
-
-<p id="event-start"></p>
-<p id="event-end"></p>
-
-</div>
 
 <div id="chart-area" class="col-sm-7"> </div>
 
