Stylized Nav Bar
no SCSS

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/rotate.css">
   <link rel="stylesheet" href="css/nouislider.min.css">
   <link rel="stylesheet" href="css/rotate.css">
+  <link rel="stylesheet" href="css/scroll.css">
+  <link rel="stylesheet" href="css/reset.css">
 
 </head>
 
